gl31-master/src/test/deca/context/invalid/sansobjet/bad_comparison.deca
// Description:
//    tests de programme incorrect syntaxiquement pour sans-objet
//
// Resultats:
//    Ligne 12 : Erreur, '=' non-valable
//
// Historique:
//    cree le 12/01/2021
{
    int a, b;

    while(b = a){
        print(b);
    }
}
